--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-tk
-Pillow
-ultralytics
-opencv-python
-matplotlib
-onnx
-torch
-psutil
+tkinter>=8.6.12
+python==3.12.5
+ultralytics==8.1.34
+torch>=2.0.0
+opencv-python>=4.8.0
+matplotlib>=3.7.0
+pillow>=9.5.0
+psutil>=5.9.0
+numpy>=1.24.0
+pyserial>=3.5
+tkintertable>=1.3.3
+ttkthemes>=3.2.2
+scipy>=1.10.0
+requests>=2.31.0
+Pillow>=9.5.0
+onnxruntime>=1.15.0
+customtkinter>=5.2.0
+tqdm>=4.65.0
