--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ psutil>=5.9.0
 numpy>=1.24.0
 pyserial>=3.5
 tkintertable>=1.3.3
+folium
+transformers
 ttkthemes>=3.2.2
 scipy>=1.10.0
 requests>=2.31.0
